--- a/style.css
+++ b/style.css
@@ -16,10 +16,6 @@ body {
     font-family: fantasy, cursive;
 }
 
-@media (max-width:768px) {
-.aaa { text-align: center;
-}
-}
 .centered-main-page-element {
     display: block;
     width: 500px;
@@ -144,4 +140,12 @@ ul li.editMode input[type=text] {
 
 ul li.editMode label {
     display:none;
+}
+
+@media (max-width: 768px) {
+
+  .aaa { 
+    text-align: center;
+  }
+  
 }
