--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: #f8f8f8;
     color: #333;
-    font-family: Lato, sans-serif;
+    font-family: "Lato", sans-serif;
 }
 .aaa {
     width: 500px;
@@ -9,11 +9,13 @@ body {
     display: block;
     text-align: right;
 }
+
 .aaa img {
     width: 100%;
 }
+
 .aaa .more_inf {
-    font-family: fantasy, cursive;
+    font-family: "Fantasy", cursive;
 }
 
 .centered-main-page-element {
@@ -21,39 +23,50 @@ body {
     width: 500px;
     margin: 0 auto 0;
 }
+
 .task {
     width: 56%;
     display: inline-block;
     flex-grow: 1
 }
+
 .task-row-wrapper {
     display: flex;
 }
+
 ul {
     margin:0;
     padding: 0px;
 }
-li, h3 {
+
+li, 
+h3 {
     list-style: none;
 }
-input,button{
+
+input,
+button{
     outline: none;
 }
+
 button {
     background: none;
     border: 0px;
     color: #888;
     font-size: 15px;
     width: 60px;
-    font-family: Lato, sans-serif;
+    font-family: "Lato", sans-serif;
     cursor: pointer;
 }
+
 button:hover {
     color: #3a3a3a;
 }
+
 /* Heading */
+
 h3,
-label[for='new-task'] {
+label[for="new-task"] {
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -62,6 +75,7 @@ label[for='new-task'] {
     margin: 0;
     text-transform: uppercase;
 }
+
 input[type="text"] {
     margin: 0;
     font-size: 18px;
@@ -71,18 +85,20 @@ input[type="text"] {
     border: 1px solid #ddd;
     background: #fff;
     border-radius: 6px;
-    font-family: Lato, sans-serif;
+    font-family: "Lato", sans-serif;
     color: #888;
 }
+
 input[type="text"]:focus {
     color: #333;
 }
 
 /* New Task */
-label[for='new-task'] {
+label[for="new-task"] {
     display: block;
     margin: 0 0 20px;
 }
+
 input#new-task {
     width: 318px;
 }
@@ -97,6 +113,7 @@ li {
     justify-content: space-between;
     align-items: center;
 }
+
 li > * {
     vertical-align: middle;
 }
@@ -104,20 +121,23 @@ li > * {
 li > input[type="checkbox"] {
     margin: 0 10px;
 }
+
 li > label {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
 }
-li >    input[type="text"] {
+li > input[type="text"] {
     width: 226px
 }
+
 button.delete img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
+
 button.delete img:hover {
     transform: rotateZ(0);
 }
@@ -129,11 +149,11 @@ ul#completed-tasks label {
 }
 
 /* Edit Task */
-ul li input[type=text] {
+ul li input[type="text"] {
     display: none
 }
 
-ul li.editMode input[type=text] {
+ul li.editMode input[type="text"] {
     display: inline-block;
     width: 224px
 }
