--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 .task {
     width: 56%;
     display: inline-block;
-    flex-grow: 1
+    flex-grow: 1;
 }
 
 .task-row-wrapper {
@@ -45,7 +45,7 @@ h3 {
 }
 
 input,
-button{
+button {
     outline: none;
 }
 
@@ -129,7 +129,7 @@ li > label {
     width: 226px;
 }
 li > input[type="text"] {
-    width: 226px
+    width: 226px;
 }
 
 button.delete img {
@@ -150,12 +150,12 @@ ul#completed-tasks label {
 
 /* Edit Task */
 ul li input[type="text"] {
-    display: none
+    display: none;
 }
 
 ul li.editMode input[type="text"] {
     display: inline-block;
-    width: 224px
+    width: 224px;
 }
 
 ul li.editMode label {
