--- a/style.css
+++ b/style.css
@@ -1,28 +1,84 @@
-body {
+/* Basic */
+
+.page {
     background-color: #f8f8f8;
-    color: #333;
+    color: #333333;
     font-family: "Lato", sans-serif;
 }
-.aaa {
+
+.list {
+    margin:0;
+    padding: 0px;
+}
+
+.list__item {
+    list-style: none;
+}
+
+.input,
+.button {
+    outline: none;
+}
+
+/* Header */
+
+.header {
     width: 500px;
     margin: 0 auto;
     display: block;
     text-align: right;
 }
 
-.aaa img {
+.header__image {
     width: 100%;
 }
 
-.aaa .more_inf {
+.header__link {
     font-family: "Fantasy", cursive;
 }
 
-.centered-main-page-element {
+/* */
+
+.main {
     display: block;
     width: 500px;
     margin: 0 auto 0;
 }
+
+.section__title {
+    color: #333333;
+    font-weight: 700;
+    font-size: 15px;
+    border-bottom: 2px solid #333333;
+    padding: 30px 0 10px;
+    margin: 0;
+    text-transform: uppercase;
+}
+
+.section__title:first-child {
+    margin-bottom: 20px;
+}
+
+.block__add-task {
+    width: 100%;
+    display: flex;
+}
+
+.button {
+    background: none;
+    border: 0px;
+    color: #888888;
+    font-size: 15px;
+    width: 60px;
+    font-family: "Lato", sans-serif;
+    cursor: pointer;
+}
+
+.button:hover {
+    color: #3a3a3a;
+}
+
+/* Task List */
 
 .task {
     width: 56%;
@@ -30,141 +86,91 @@ body {
     flex-grow: 1;
 }
 
-.task-row-wrapper {
-    display: flex;
-}
-
-ul {
-    margin:0;
-    padding: 0px;
-}
-
-li, 
-h3 {
-    list-style: none;
-}
-
-input,
-button {
-    outline: none;
-}
-
-button {
-    background: none;
-    border: 0px;
-    color: #888;
-    font-size: 15px;
-    width: 60px;
-    font-family: "Lato", sans-serif;
-    cursor: pointer;
-}
-
-button:hover {
-    color: #3a3a3a;
-}
-
-/* Heading */
-
-h3,
-label[for="new-task"] {
-    color: #333;
-    font-weight: 700;
-    font-size: 15px;
-    border-bottom: 2px solid #333;
-    padding: 30px 0 10px;
-    margin: 0;
-    text-transform: uppercase;
-}
-
-input[type="text"] {
+.input {
     margin: 0;
     font-size: 18px;
     line-height: 18px;
     height: 21px;
     padding: 0 9px;
-    border: 1px solid #ddd;
-    background: #fff;
+    border: 1px solid #dddddd;
+    background: #ffffff;
     border-radius: 6px;
     font-family: "Lato", sans-serif;
-    color: #888;
+    color: #888888;
 }
 
-input[type="text"]:focus {
-    color: #333;
+.input:focus {
+    color: #333333;
 }
 
-/* New Task */
-label[for="new-task"] {
-    display: block;
-    margin: 0 0 20px;
-}
-
-input#new-task {
+#input__new-task {
     width: 318px;
 }
 
-/* Task list */
-li {
+.list__item {
     overflow: hidden;
     padding: 20px 0;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid #eeeeee;
 
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-li > * {
+.list__item > * {
     vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.item__checkbox {
     margin: 0 10px;
 }
 
-li > label {
+.list__item > label {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
 }
-li > input[type="text"] {
+
+.list__item > .item__input {
     width: 226px;
 }
 
-button.delete img {
+.button__delete img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.button__delete img:hover {
     transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks label {
     text-decoration: line-through;
-    color: #888;
+    color: #888888;
 }
 
 /* Edit Task */
-ul li input[type="text"] {
+.list li .item__input {
     display: none;
 }
 
-ul li.editMode input[type="text"] {
+.list li.edit-mode .item__input {
     display: inline-block;
     width: 224px;
 }
 
-ul li.editMode label {
+.list li.edit-mode label {
     display: none;
 }
 
+
+
 @media (max-width: 768px) {
 
-  .aaa { 
+  .header { 
     text-align: center;
   }
 
