--- a/style.css
+++ b/style.css
@@ -1,171 +1,174 @@
 /* Basic */
 
 .page {
-    background-color: #f8f8f8;
-    color: #333333;
-    font-family: "Lato", sans-serif;
+  background-color: #f8f8f8;
+  color: #333333;
+  font-family: "Lato", sans-serif;
 }
 
 .list {
-    margin:0;
-    padding: 0px;
+  margin:0;
+  padding: 0px;
 }
 
 .list__item {
-    list-style: none;
+  list-style: none;
 }
 
 .input,
 .button {
-    outline: none;
+  outline: none;
 }
 
 /* Header */
 
 .header {
-    width: 500px;
-    margin: 0 auto;
-    display: block;
-    text-align: right;
+  width: 500px;
+  margin: 0 auto;
+  display: block;
+  text-align: right;
 }
 
 .header__image {
-    width: 100%;
+  width: 100%;
 }
 
 .header__link {
-    font-family: "Fantasy", cursive;
+  font-family: "Fantasy", cursive;
 }
 
 /* */
 
 .main {
-    display: block;
-    width: 500px;
-    margin: 0 auto 0;
+  display: block;
+  width: 500px;
+  margin: 0 auto 0;
 }
 
 .section__title {
-    color: #333333;
-    font-weight: 700;
-    font-size: 15px;
-    border-bottom: 2px solid #333333;
-    padding: 30px 0 10px;
-    margin: 0;
-    text-transform: uppercase;
+  color: #333333;
+  font-weight: 700;
+  font-size: 15px;
+  border-bottom: 2px solid #333333;
+  padding: 30px 0 10px;
+  margin: 0;
+  text-transform: uppercase;
 }
 
 .section__title:first-child {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
-.block__add-task {
-    width: 100%;
-    display: flex;
+.section__add--input-block {
+  width: 100%;
+  display: flex;
 }
 
 /* Button */
 
 .button {
-    background: none;
-    border: 0px;
-    color: #888888;
-    font-size: 15px;
-    width: 60px;
-    font-family: "Lato", sans-serif;
-    cursor: pointer;
+  background: none;
+  border: 0px;
+  color: #888888;
+  font-size: 15px;
+  width: 60px;
+  font-family: "Lato", sans-serif;
+  cursor: pointer;
 }
 
 .button:hover {
-    color: #3a3a3a;
+  color: #3a3a3a;
 }
 
 .button__img {
-    height: 2em;
-    transform: rotateZ(45deg);
-    transition: transform 200ms ease-in;
+  height: 2em;
+  transform: rotateZ(45deg);
+  transition: transform 200ms ease-in;
 }
 
 .button__img:hover {
-    transform: rotateZ(0);
+  transform: rotateZ(0);
 }
 
 /* Task List */
 
 .input {
-    margin: 0;
-    font-size: 18px;
-    line-height: 18px;
-    height: 21px;
-    padding: 0 9px;
-    border: 1px solid #dddddd;
-    background: #ffffff;
-    border-radius: 6px;
-    font-family: "Lato", sans-serif;
-    color: #888888;
+  margin: 0;
+  font-size: 18px;
+  line-height: 18px;
+  height: 21px;
+  padding: 0 9px;
+  border: 1px solid #dddddd;
+  background: #ffffff;
+  border-radius: 6px;
+  font-family: "Lato", sans-serif;
+  color: #888888;
 }
 
 .input:focus {
-    color: #333333;
+  color: #333333;
 }
 
 .task {
-    width: 56%;
-    display: inline-block;
-    flex-grow: 1;
+  width: 56%;
+  display: inline-block;
+  flex-grow: 1;
 }
 
 .list__item {
-    overflow: hidden;
-    padding: 20px 0;
-    border-bottom: 1px solid #eeeeee;
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  overflow: hidden;
+  padding: 20px 0;
+  border-bottom: 1px solid #eeeeee;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .item__checkbox {
-    margin: 0 10px;
+  margin: 0 10px;
 }
 
 .item__name {
-    padding-left: 10px;
-    box-sizing: border-box;
-    font-size: 18px;
-    width: 226px;
+  padding-left: 10px;
+  box-sizing: border-box;
+  font-size: 18px;
+  width: 226px;
 }
 
 .item__input {
-    width: 226px;
+  width: 226px;
 }
 
 /* New */
-#input__new-task {
-    width: 318px;
+
+#new-task {
+  width: 318px;
 }
 
 /* Completed */
+
 #completed-tasks .item__name {
-    text-decoration: line-through;
-    color: #888888;
+  text-decoration: line-through;
+  color: #888888;
 }
 
 /* Edit Task */
+
 .item__input {
-    display: none;
+  display: none;
 }
 
 .edit-mode .item__input {
-    display: inline-block;
-    width: 224px;
+  display: inline-block;
+  width: 224px;
 }
 
 .edit-mode .item__name {
-    display: none;
+  display: none;
 }
 
 /* Media Queries */
+
 @media (max-width: 768px) {
 
   .header { 
