--- a/style.css
+++ b/style.css
@@ -80,14 +80,28 @@
   color: #3a3a3a;
 }
 
-.button__img {
-  height: 2em;
+.button--delete {
+  height: 32px;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-.button__img:hover {
+.icon {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-image: url("./remove.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+
+.button--delete:hover {
   transform: rotateZ(0);
+}
+
+.button--delete:hover .icon {
+  background-image: url("./remove-red.svg");
 }
 
 /* Task List */
